# MethaNet

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: snakemake.yml
configs/: pipeline.yaml
src/methanet/: __init__.py  features.py  models.py
tests/: __init__.py
workflow/: Snakefile
workflow/profiles/ci/: config.yaml
workflow/rules/: common.smk  data_curator.smk  domain_adapter.smk  embedding_generator.smk  flux_predictor.smk  marker_annotator.smk
workflow/scripts/: bootstrap_ci.py  embed_dnabert2.py  embed_esm2.py  explain_model.py  measure_shift.py  select_transferable.py  train_coral.py  train_dann.py  train_flux_model.py  validate_flux_model.py
