[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methanet"
version = "0.1.0"
description = "Transfer learning for methane flux prediction from microbiome data"
readme = "README.md"
license = "CC-BY-4.0"
requires-python = ">=3.9"
authors = [
    { name = "Alon Philosof", email = "aphilosof@gmail.com" },
    { name = "Jay Gutierrez", email = "jg@graphoflife.com" },
]
keywords = [
    "methane",
    "metagenomics",
    "transfer-learning",
    "microbiome",
    "climate",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "biopython>=1.79",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/jaygut/MethaNet"
Repository = "https://github.com/jaygut/MethaNet"

[tool.hatch.build.targets.wheel]
packages = ["src/methanet"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
